--- a/app/widget.html
+++ b/app/widget.html
@@ -4,16 +4,16 @@
 <head>
   <meta charset="UTF-8" />
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
-  <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=..."></script>
+  <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=insertyourapikey"></script>
   <script type="text/javascript" src="https://js.zohostatic.com/creator/widgets/version/1.0/widgetsdk-min.js"></script>
 
-  <link rel="stylesheet" src="styles/main.css" />
+  <link rel="stylesheet" href="styles/main.css" />
   <script type="text/javascript" src="js/app.js"></script>
   
 </head>
 
 <body>
-  <div id="map" style="height: 100vh; min-height: 350px; width: 100%"></div>
+  <div id="map"></div>
 </body>
 
 <script>
