--- a/app/widget.html
+++ b/app/widget.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8" />
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
-  <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=insertyourapiket"></script>
+  <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=<insert-your-apikey-here>"></script>
   <script type="text/javascript" src="https://js.zohostatic.com/creator/widgets/version/1.0/widgetsdk-min.js"></script>
 
   <link rel="stylesheet" href="styles/main.css" />
